syntax = "proto3";

package org.corfudb.runtime;
option java_package = "org.corfudb.runtime.proto";

/**
 * NodeConnectivity and related Protobuf definitions.
 * Used by the Management RPCs.
 */

enum NodeConnectivityType {
  NOT_READY = 0;
  CONNECTED = 1;
  UNAVAILABLE = 2;
}

message ConnectivityEntryMsg {
  string node = 1;
  bool status_ok = 2;
}

// Represents the number of connections a node has to other nodes.
message NodeConnectivityMsg {
  string endpoint = 1;
  NodeConnectivityType connectivity_type = 2;
  repeated ConnectivityEntryMsg connectivity_info = 3;
  int64 epoch = 4;
}
